--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
   "name": "code",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "hello",
+  "main": "api.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "nodemon api.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "-v https://github.com/UpSak/comic-shop-website"
+  },
+  "keywords": [
+    "api"
+  ],
+  "author": "sakriya",
+  "license": "ISC",
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.3"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "express-session": "^1.18.0",
+    "knex": "^3.1.0",
+    "nodemon": "^3.1.0",
+    "pg": "^8.11.3"
   }
 }
